# SimpleSdlMusicPlayer

./: CMakeLists.txt  README.md
src/: main.c
